# epeer

./: .gitignore  Readme.md  cardanosigner-config.yaml  connect.yaml  docker-compose.yml  firefly-core.yaml  post.txt
contracts/: aiken.toml  plutus.json
contracts/lib/etrade/: func.ak  types.ak
contracts/validators/: emint.ak  etrade.ak
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/config/: nodes.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: EnergyDashboard.tsx  (+1 more)
dataexchange_0/: cert.pem
deploy/: Dockerfile  cardanosigner01-config.yaml  cardanosigner02-config.yaml  connect00.yaml  connect01.yaml  connect02.yaml  docker-compose.yml  docker-compose_multi_nodes.yml  firefly-core00.yaml  firefly-core01.yaml  firefly-core02.yaml  signer.yaml  signer00.yaml  signer01.yaml
deploy/backend/: index.js
deploy/dataexchange_01/: config.json  key.pem
deploy/frontend/: package.json
deploy/wallet_00/: addr_test1vq6drteps2atsyyars65363r9navemqzdj8p2jw9pf29lrqgym9dw.skey
deploy/wallet_01/: addr_test1vz9zvq6kjs8mslam7ugrla0daqecyenvmhy8h4ekakargugy75294.skey
deploy/wallet_02/: addr_test1vq8muyjvgcrc05xzntqvf5vqzwa0l3uzpys28jxwaa078cq9e7l8c.skey
firefly-data/db/: sqlite.db
frontend/: index.html  package-lock.json
src/epeer-app/: energy_simulator.py  helper.py  main.py  network.py  status.py  transactions.py  ws_listener.py
src/key_gen/: Cargo.toml
src/key_gen/src/: main.rs
src/wasm/energy-market/src/: Cargo.toml  lib.rs
src/wasm/epeer/: Cargo.toml  contract.json
src/wasm/epeer/src/: lib.rs
(+11 files in other folders)
